--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
-cycler==0.10.0
-gunicorn==20.1.0
-joblib==1.1.0
-kiwisolver==1.3.2
-matplotlib==3.4.3
-numpy==1.21.2
-Pillow==8.3.2
-pyparsing==2.4.7
-python-dateutil==2.8.2
-scikit-learn==1.0.1
-scipy==1.7.2
+alembic==1.7.4
+autopep8==1.6.0
+click==8.0.3
+dnspython==2.1.0
+dominate==2.6.0
+email-validator==1.1.3
+Flask==2.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.2
+Mako==1.1.5
+MarkupSafe==2.0.1
+phonenumbers==8.12.36
+psycopg2-binary==2.9.1
+pycodestyle==2.8.0
+python-dotenv==0.19.1
 six==1.16.0
-sklearn==0.0
-threadpoolctl==3.0.0
+SQLAlchemy==1.4.26
+toml==0.10.2
+tornado==6.1
+visitor==0.1.3
+Werkzeug==2.0.2
+WTForms==3.0.0
