--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
